--- a/src/app/solde/solde.component.html
+++ b/src/app/solde/solde.component.html
@@ -1,7 +1,6 @@
 <p-toolbar styleClass="mb-6">
     <ng-template #start>
-      <p-button label="New" icon="pi pi-plus" severity="secondary" class="mr-2" (onClick)="openNew()" />
-      <p-button severity="secondary" label="Delete" icon="pi pi-trash" outlined  [disabled]="!selectedEmploye || !selectedEmploye.length" />
+<!--       <p-button label="New" icon="pi pi-plus" severity="secondary" class="mr-2" (onClick)="openNew()" /> -->
     </ng-template>
   
     <ng-template #end>
@@ -46,15 +45,15 @@
       <tr>
         <td><p-tableCheckbox [value]="employe" /></td>
         <td *ngFor="let col of cols">{{ employe[col.field] }}</td>
-        <td><p-button icon="pi pi-trash" 
+         <td>
+          <p-button  icon="pi pi-calendar-plus" 
             severity="danger" [rounded]="true" [outlined]="true"
-            (click)="supprimerEmploye(employe)" />
+            (click)="initializeEmployeeSolde(employe.id)" />
             
-          <p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" [outlined]="true" (click)="editEmploye(employe)" />
+       <p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" [outlined]="true"  (click)="openNew(employe.id)" /> 
         </td>
-         
-    
       </tr>
+
     </ng-template> 
    
 
@@ -64,27 +63,32 @@
   
   <p-dialog [(visible)]="employeDialog" [style]="{ width: '450px' }" header="Détails de l'employé" [modal]="true">
     <ng-template #content>
-      <div class="flex flex-col gap-4">
-        <div *ngFor="let field of ['nom','prenom','email','tele','matrecule','adress','password']">
-          <label [for]="field" class="block font-bold mb-2">{{ field | titlecase }}</label>
-          <input type="text" pInputText [id]="field" [(ngModel)]="employe[field]" required />
-          <small class="text-red-500" *ngIf="submitted && !employe[field]">Champ requis.</small>
-        </div>
-        <div>
-          <label for="poste" class="block font-bold mb-2">degre</label>
-          <p-dropdown [options]="degrees" [(ngModel)]="employe.degre" placeholder="Choisir un degre" />
-        </div>
-        <div>
-          <label for="poste" class="block font-bold mb-2">Poste</label>
-          <p-dropdown [options]="poste" [(ngModel)]="employe.poste" placeholder="Choisir un poste" />
-        </div>
-      </div>
+    
+  <p-table [value]="soldes" [paginator]="true" [rows]="5" [responsiveLayout]="'scroll'">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Année</th>
+      <th>Solde</th>
+      <th>Acquis</th>
+      <th>Employé</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-solde>
+    <tr>
+      <td>{{ solde.year }}</td>
+      <td>{{ solde.balance }}</td>
+      <td>{{ solde.accumulated }}</td>
+      <td>{{ solde.userFullName }}</td>
+    </tr>
+  </ng-template>
+</p-table>
     </ng-template>
     <p-toast></p-toast>
   
     <ng-template #footer>
-        <p-button *ngIf="submittedaddnew" label="Save" icon="pi pi-check" (click)="saveEmploye()"></p-button>
-        <p-button *ngIf="submittedupdate" label="Update" icon="pi pi-check" (click)="saveEmploye()"></p-button>
         <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-text" (click)="hideDialog()"></p-button>
     </ng-template>
   </p-dialog>
+
+
+  
